testsuite/tests/module/mod101.stderr

mod101.hs:8:5: error:
    Data constructor not in scope: ConB :: Bool -> DataA
    Suggested fix: Perhaps use ‘ConA’ (imported from Mod101_AuxB)
